fix experiences spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1310,6 +1310,7 @@ a {
 
 .education-item-info {
     margin: 0;
+	margin-left: -1em;
     padding: 0;
 }
 
